# zero2prod

./: .env  .gitlab-ci.ymal  .pre-commit-config.yaml  Cargo.toml  _typos.toml  deny.toml  docker-compose.yaml  test.rest
config/: application.yaml
migration/src/: lib.rs  m20250929_063424_create_subscriptions_table.rs
src/: lib.rs  main.rs  startup.rs
src/config/: application.rs  database.rs  mod.rs
src/entity/: mod.rs  prelude.rs  subscriptions.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
