[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["codecow <codedouzhenbo@gmail.com>"]
license = "MIT"


[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
chrono = "0.4.42"
config = { version = "0.15.17", features = ["yaml"] }
sea-orm = { version = "1.1.16", features = [
    "with-chrono",
    "debug-print",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "with-uuid",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }


[lib]
name = "zero2prod"
path = "src/lib.rs"


[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
